--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 		<!-- </div> -->
 		<!-- <script src="js/jquery.min.js"></script> -->
 		<script src="http://code.jquery.com/jquery-1.7.2.min.js"></script>
-
+<!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-ajaxtransport-xdomainrequest/1.0.3/jquery.xdomainrequest.min.js"></script> -->
 		<script type="text/javascript" src="js/XDomainRequest.js"></script>
 		<script type="text/javascript" src="js/request.js"></script>
 		<script type="text/javascript" src="js/common.js"></script>
