再次修改，学生端任务列表，包括页面样式

--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                 	console.log(888);
                    if(loginData.Result==1){
 			    		console.log(22222);
-                        localStorage.setItem('Entoken',loginData.Data.UserToken);
+                        sessionStorage.setItem('Entoken',loginData.Data.UserToken);
                 		localStorage.setItem('sexidentitys',loginData.Data.Identitys);
                 	
                 	    var url='';
