--- a/register.html
+++ b/register.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" type="text/css" href="css/common.css">
     <style type="text/css">
     	#register{
-    		width: 200px;
+    		width: 400px;
             height: 430px;
     		position: absolute;
              left: 50%;
             top: 50%;
-            margin: -230px 0 0 -100px;
+            margin: -230px 0 0 -200px;
             text-align: center;
     	}
         #register:after{
@@ -31,7 +31,7 @@
             height: 120px!important;
         }
         .stu{
-        	width: 200px;
+        	width: 400px;
             margin-top: 30px;
         }
         .stu>div{
@@ -47,6 +47,7 @@
         	margin-top: 20px;
         	width:80px;
         	height: 80px;
+            border-radius: 50%;
         }
         .active{
         	background-color: rgb(0,153,255)!important;
@@ -71,13 +72,13 @@
     		</div>
             <div class="title">注册</div>
     		<div class="lf stu">
-    			<div class="">
+    			<div class=" lf">
     				<a href="page/teacher/register.html">
     					<img src="img/student/u1492.jpg">
     				    <p>我是老师</p>
     				</a>
     			</div>
-    			<div class="">
+    			<div class="lf">
     				<a href="page/student/register.html">
     					<img src="img/student/u1486.jpg">
     					<p>我是学生</p>
