修改国庆第一版

--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                 var login={};
                 var identitys=0;
                 localCheck();
+                sessionStorage.clear();
 				if(localStorage.getItem('deviceID')){
 					deviceId = localStorage.getItem('deviceID');
 					console.log(deviceId);
