--- a/register.html
+++ b/register.html
@@ -56,7 +56,7 @@
         .active a{
             color: #fff;
         }
-        .title{
+        .regi_title{
             margin-top: 30px;
             font-size: 18px;
             font-weight: 600;
@@ -70,7 +70,7 @@
     			<img src="img/120.png">
     			<!-- <p>注册学生账号</p> -->
     		</div>
-            <div class="title">注册</div>
+            <div class="regi_title">注册</div>
     		<div class="lf stu">
     			<div class=" lf">
     				<a href="page/teacher/register.html">
